# uniai-kernel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_backend.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/versions/: 061b5546cf64_add_dynamic_tools_table.py  076afe8595a2_add_agent_score_history.py  09ddfd4f1e09_add_graph_execution_telemetry.py  24f0195149f3_add_bio_and_avatar_to_user.py  25bd841e5647_add_thread_state_to_sessions.py  29818539d1b3_add_multi_tenant_provider_models.py  320c508cd676_add_agent_role_and_routing_fields.py  7be21ca631f3_add_feedback_to_chat_messages.py  9b2c7d8e4f01_add_ontology_data_sources.py  a4d8c7b1e902_add_ontology_approvals.py  a6c390ce301b_add_tool_calls_to_messages.py  ab7102e662ea_add_graph_topology_versions_table.py  adb6a798d9c5_add_phone_and_update_username.py  aee2860107b1_fix_agent_profile_foreign_key_constraint.py  b6e4d2a9c831_add_ontology_secrets.py  ba918c030aa0_initial_provider_and_model_tables.py  c0e38764a330_add_graph_templates.py  c3f4a8b9d102_add_ontology_governance_constraints.py  (+6 more)
backend/app/: main.py
backend/scripts/: activate_all_experts.py  activate_vector.py  add_qwen.py  check_db.py  demo_chat.py  fix_vector_dimension.py  harden_experts.py  init_db_fresh.py  init_providers.py  inspect_all_agents.py  make_agents_public.py  reinit_user.py  reset_orchestrator.py  reset_user.py  seed_demo.py  seed_swarm_agents.py  sync_provider_templates.py  verify_agents.py  verify_ontology_e2e.py
backend/tests/: test_agent_ontology_runtime.py  test_agent_websearch_gate.py  test_chat_memory.py  test_dynamic_cli_security.py  test_ontology_governance.py  test_ontology_service.py  test_security_authz.py  verify_infra.py  verify_models.py  verify_providers.py  verify_sessions.py
(+159 files in other folders)
