[project]
name = "uniai-kernel"
version = "1.0.0"
description = "UniAI Kernel - 智能体开发基座，基于 FastAPI、LangGraph 和 LiteLLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "litellm",
    "langgraph",
    "httpx",
    "tenacity",
    "cryptography",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "greenlet",
    "pgvector",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "email-validator",
    "debugpy>=1.8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
