[project]
name = "uniai-kernel"
version = "2.5.0"
description = "Production-grade Multi-tenant Agentic OS Kernel with Graph-native Orchestration, Ontology Governance, and Enterprise Observability"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "litellm",
    "langgraph",
    "httpx",
    "tenacity",
    "cryptography",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "greenlet",
    "pgvector",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "email-validator",
    "debugpy>=1.8.20",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary]>=3.3.3",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
